--- a/force-app/main/default/lwc/messenger/messenger.html
+++ b/force-app/main/default/lwc/messenger/messenger.html
@@ -2,11 +2,11 @@
     <div class="slds-grid slds-grid_vertical slds-p-around_small">
         <lightning-tabset>
             <lightning-tab label="Home" value="Home">
-                <c-user-search onselect={handleSelect}></c-user-search>
+                <c-user-search style="position: static" onselect={handleSelect}></c-user-search>
             </lightning-tab>
             <template for:each={chatWindows} for:item="window">
                 <lightning-tab key={window.key} value={window.key} end-icon-name="standard:rtc_presence" label={window.value}>
-                    <c-chat-window user-id={userId} active-users-name={objUser.Name} recipient-name={window.value} recipient-id={window.key}></c-chat-window>
+                    <c-chat-window onclose={handleWindowClose} user-id={userId} active-users-name={objUser.Name} recipient-name={window.value} recipient-id={window.key}></c-chat-window>
                 </lightning-tab>
             </template>
         </lightning-tabset>
