Chatter Feature 18th April

--- a/force-app/main/default/lwc/loadFullHistoryModal/loadFullHistoryModal.html
+++ b/force-app/main/default/lwc/loadFullHistoryModal/loadFullHistoryModal.html
@@ -5,7 +5,7 @@
                 <h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Load Full Chat History with {recipientName}?</h2>
             </header>
             <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-                <p>For performance, messenger loads the last 50 messages in your conversation. Conversations with many messages can take a long load time. 
+                <p>For performance reasons, messenger loads the last 50 messages in your conversation. Conversations with many messages can take a long time to load. 
                     If you'd like to load your full chat history, proceed below. Alternatively, choose to load the last 300 messages.</p>
             </div>
             <footer class="slds-modal__footer">
