--- a/force-app/main/default/lwc/chatWindow/chatWindow.html
+++ b/force-app/main/default/lwc/chatWindow/chatWindow.html
@@ -18,6 +18,9 @@
             <div class="slds-p-around_small chat-window-box" >
                 <template for:each={chatText} for:item="chat">
                     <div key={chat} class={chat.class}>
+                        <template if:true={showBoxes}>
+                            <lightning-input type="checkbox"> </lightning-input>
+                        </template>
                         <p>
                             <lightning-formatted-rich-text style="font-size:9px; color:grey" value={chat.timestamp}></lightning-formatted-rich-text>
                         </p>
@@ -30,6 +33,11 @@
                     </div>
                 </template>
                 <div class="slds-col slds-size_1-of-1 text-box" style="clear: both">
+                    <template if:true={showBoxes}>
+                        <div class="slds-m-bottom_xx-small slds-scrollable">
+                            <c-record-lookup></c-record-lookup>
+                        </div>
+                    </template>
                     <div class="button-row">
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:end_chat" onclick={closeWindow}  alternative-text="End Chat" title="End Chat"></lightning-button-icon>
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:arrowup" onclick={scrollToTop}  alternative-text="Scroll to Top" title="Scroll to Top"></lightning-button-icon>
@@ -37,8 +45,11 @@
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:comments" onclick={toggleFullHistory}  alternative-text="Load Full History" title="Load Full History"></lightning-button-icon>
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name={muteIcon} onclick={toggleMute}  alternative-text="Notifications Off" title="Notifications Off"></lightning-button-icon>
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:image" onclick={toggleUploadModal}  alternative-text="Send File" title="Send File"></lightning-button-icon>
+                        <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="action:share_post" onclick={toggleShowBoxes}  alternative-text="Post to Chatter" title="Post to Chatter"></lightning-button-icon>
                     </div>
-                    <lightning-input-rich-text class="slds-p-top_xx-small" disabled-categories="FORMAT_FONT, FORMAT_BODY, ALIGN_TEXT, INSERT_CONTENT, REMOVE_FORMATTING" value={currentText} onkeyup={handleKeyPress}></lightning-input-rich-text>
+                    <template if:false={showBoxes}>
+                        <lightning-input-rich-text class="slds-p-top_xx-small" disabled-categories="FORMAT_FONT, FORMAT_BODY, ALIGN_TEXT, INSERT_CONTENT, REMOVE_FORMATTING" value={currentText} onkeyup={handleKeyPress}></lightning-input-rich-text>
+                    </template>
                 </div>
             </div>
         </div>
