--- a/force-app/main/default/lwc/loadFullHistoryModal/loadFullHistoryModal.html
+++ b/force-app/main/default/lwc/loadFullHistoryModal/loadFullHistoryModal.html
@@ -1,5 +1,5 @@
 <template>
-    <section role="dialog" tabindex="-1" class="slds-modal slds-fade-in-open" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1">
+    <section role="dialog" tabindex="-1" class="slds-modal slds-fade-in-open">
         <div class="slds-modal__container">
             <header class="slds-modal__header">
                 <h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Load Full Chat History with {recipientName}?</h2>
