--- a/force-app/main/default/lwc/recordItem/recordItem.html
+++ b/force-app/main/default/lwc/recordItem/recordItem.html
@@ -1,6 +1,6 @@
 <template>
     <div >
-        <div class="slds-grid slds-wrap slds-dropdown_length-with-icon-7 slds-dropdown_fluid slds-p-left_small slds-border_left slds-border_right" style="background:white">
+        <div class="slds-grid slds-wrap slds-dropdown_length-with-icon-7 slds-dropdown_fluid slds-border_left slds-border_right" style="background:white">
             <div class="slds-col slds-size_4-of-4 ">
                 <ul class="slds-listbox slds-listbox_vertical" role="presentation">
                     <li role="presentation" class="slds-listbox__item">
@@ -9,7 +9,7 @@
                                 <lightning-icon icon-name={iconname} size="small"></lightning-icon>
                             </span>
                             <span class="slds-media__body" style="padding-top: 9px;font-weight: 600;">
-                                <span class="slds-listbox__option-text slds-listbox__option-text_entity">
+                                <span class="slds-listbox__option-text slds-listbox__option-text_entity ">
                                     {record.Name}
                                 </span>
                             </span>
