--- a/force-app/main/default/lwc/chatWindow/chatWindow.html
+++ b/force-app/main/default/lwc/chatWindow/chatWindow.html
@@ -1,6 +1,6 @@
 <template>
     <template if:true={loading}>
-        <div class="exampleHolder">
+        <div>
             <lightning-spinner style="position:absolute; top:100px" alternative-text="Loading" size="medium"></lightning-spinner>
         </div>
     </template>
@@ -19,29 +19,28 @@
                 <c-load-full-history-modal recipient-name={recipientName} onclose={toggleFullHistory} onconfirm={loadFullChatHistory}></c-load-full-history-modal>
             </template>
 
-            <div class="button-row" style="z-index: 2;">
-                <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:end_chat" onclick={closeWindow}  alternative-text="End Chat" title="End Chat"></lightning-button-icon>
-                <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:arrowup" onclick={scrollToTop}  alternative-text="Scroll to Top" title="Scroll to Top"></lightning-button-icon>
-                <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:arrowdown" onclick={scrollToBottom}  alternative-text="Scroll to Bottom" title="Scroll to Bottom"></lightning-button-icon>
-                <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:comments" onclick={toggleFullHistory}  alternative-text="Load Full History" title="Load Full History"></lightning-button-icon>
-                <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name={muteIcon} onclick={toggleMute}  alternative-text="Notifications Off" title="Notifications Off"></lightning-button-icon>
-                <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:image" onclick={toggleUploadModal}  alternative-text="Send File" title="Send File"></lightning-button-icon>
-                <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="action:share_post" onclick={toggleSelectForChatter}  alternative-text="Post to Chatter" title="Post to Chatter"></lightning-button-icon>
-            </div>
-
             <template if:true={selectForChatter}>
-                <div class="slds-m-bottom_xx-small slds-m-top_xx-small" style="z-index: 2;">
+                <div class="slds-m-bottom_xx-small slds-m-top_x-large" style="z-index: 2;">
                     <c-record-lookup onselectedrec={handleSelectedRecord} onpopup={toggleChatterModal}></c-record-lookup>
                 </div>
             </template>
 
             <div class="slds-p-around_small chat-window-box" >
+                <div class="button-row slds-p-bottom_x-small" style="z-index: 2;">
+                    <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:end_chat" onclick={closeWindow}  alternative-text="End Chat" title="End Chat"></lightning-button-icon>
+                    <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:arrowup" onclick={scrollToTop}  alternative-text="Scroll to Top" title="Scroll to Top"></lightning-button-icon>
+                    <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:arrowdown" onclick={scrollToBottom}  alternative-text="Scroll to Bottom" title="Scroll to Bottom"></lightning-button-icon>
+                    <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:comments" onclick={toggleFullHistory}  alternative-text="Load Full History" title="Load Full History"></lightning-button-icon>
+                    <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name={muteIcon} onclick={toggleMute}  alternative-text="Notifications Off" title="Notifications Off"></lightning-button-icon>
+                    <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:image" onclick={toggleUploadModal}  alternative-text="Send File" title="Send File"></lightning-button-icon>
+                    <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="action:share_post" onclick={toggleSelectForChatter}  alternative-text="Post to Chatter" title="Post to Chatter"></lightning-button-icon>
+                </div>
+
                 <template for:each={chatText} for:item="chat">
                     <div data-target-id={chat.messageId} key={chat.messageId} class={chat.cls} onclick={handleChatSelect}>
-                            <lightning-formatted-rich-text style="font-size:9px; color:grey" value={chat.timestamp}></lightning-formatted-rich-text>
-                        </p>
                         <p>
-                            <lightning-formatted-rich-text style="font-weight: bold; color:grey" value={chat.senderName}></lightning-formatted-rich-text>
+                            <lightning-formatted-rich-text style="font-weight: bold; color:grey" value={chat.senderName}></lightning-formatted-rich-text> 
+                            <lightning-formatted-rich-text class="slds-m-left_x-small" style="font-size:9px; color:grey" value={chat.timestamp}></lightning-formatted-rich-text>
                         </p>
                         <p>
                             <lightning-formatted-rich-text value={chat.message}></lightning-formatted-rich-text>
